--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1"
   }
