--- a/.github/workflows/daily-run.yml
+++ b/.github/workflows/daily-run.yml
@@ -9,6 +9,10 @@ jobs:
   build-and-run:
     runs-on: ubuntu-latest
 
+    env:
+      LINE_NOTIFY_TOKEN: ${{ secrets.LINE_NOTIFY_TOKEN }}
+      HEALTH_PLANET_ACCESS_TOKEN: ${{ secrets.HEALTH_PLANET_ACCESS_TOKEN }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
